[package]
name = "lengine"
version = "0.1.0"
authors = ["ksqsf <i@ksqsf.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
byteorder = "1.3"
libc = "0.2.62"
slab = "0.4.2"
bytes = "0.4.12"
positioned-io = { git="https://github.com/vasi/positioned-io.git" }

[dev-dependencies]
rand = "0.7.0"
